<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/your_background_color_here">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="274dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/welcome_back_illustration" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_back"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_email"
        android:background="@drawable/button_background"
        android:inputType="textEmailAddress"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_password"
        android:background="@drawable/button_background"
        android:inputType="textPassword"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_in"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/dont_have_account" />

</LinearLayout>
